--- a/slides/03 - LaTeX/texProva.tex
+++ b/slides/03 - LaTeX/texProva.tex
@@ -1,44 +1,11 @@
 \documentclass{article}
-\usepackage{listings}
 
 \usepackage{Sweave}
 \begin{document}
 \input{texProva-concordance}
 
 
-\author{Ottavia}
-\title{esempio}
-
-\maketitle
-
-\section{Prova}
-
-\begin{Schunk}
-\begin{Sinput}
-> x=mean(cars$speed)
-\end{Sinput}
-\end{Schunk}
-
-15.4
-
-\verb*||
-
-$\sum x_i / n = 15.4$
-
-
-\begin{figure}
-\begin{Schunk}
-\begin{Sinput}
-> (plot(cars$speed, cars$dist))
-\end{Sinput}
-\begin{Soutput}
-NULL
-\end{Soutput}
-\end{Schunk}
-\includegraphics{texProva-002}
-\end{figure}
-
-
+Hello world
 
 
 \end{document}
